tests/neg-macros/i17338.scala
import scala.quoted.*

def test(using quotes: Quotes): Expr[Expr[Int]] =
  '{ '{ 1 } } // error
